Set initial value of src attribute of docs iFrame

--- a/versionSwitcher/static/index.html
+++ b/versionSwitcher/static/index.html
@@ -9,11 +9,6 @@
     <link rel="stylesheet" href="versionSwitcher/versionSwitcher.css">
 </head>
 <body>
-    <div class="">
-        <script>
-            //document.write('v', data.currentVersion);
-        </script>
-    </div>
     <form class="form-inline version-switcher">
         <div class="form-group">
           <label for="selectVersion">Version:</label>
@@ -21,7 +16,7 @@
         </div>
     </form>
 
-    <iframe id="docs" src='./1.0.4'></iframe>
+    <iframe id="docs"></iframe>
     <script src="versionSwitcher/jquery.min.js"></script>
     <script src="versionSwitcher/data.js"></script>
     <script src="versionSwitcher/versionSwitcher.js"></script>
